Fixed the navbar and spacing

--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -118,3 +118,8 @@
   height: auto;
   margin-left: 8px;
 }
+
+.dark-nav{
+  background: white;
+  transition: 0.5s;
+}
